--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
   "dependencies": {
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "v1",
+    "@walletconnect/web3-provider": "^1.8.0",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.2",
+    "ethers": "^5.7.2",
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
+    "react-toastify": "^9.1.1",
     "redux": "^4.2.0",
-    "sass": "^1.56.0"
+    "sass": "^1.56.0",
+    "web3": "^1.8.0",
+    "web3modal": "^1.9.9"
   },
   "devDependencies": {
     "@types/node": "18.11.9",
