Update some stuff in some pages

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,6 +2,6 @@
   "compilerOptions": {
     "baseUrl": "."
   },
-  "include": [".", "next-env.d.js", "**/*.js"],
+  "include": ["."],
   "exclude": ["node_modules"]
 }
